# foam-tracing

./: Cargo.toml  README.md
src/: camera.rs  compute.wgsl  lib.rs  main.rs  shader.wgsl
