[package]
name = "foamtracing"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.29.0"
env_logger = "0.11.3"
log = "0.4"
wgpu = "24.0.1"
pollster = "0.4.0"
cgmath = "0.18.0"
bytemuck = { version = "1.12", features = [ "derive" ]}
rand = "0.9.0"
meshless_voronoi = { version = "0.7.2", features = [ "rayon" ]}
glam = "0.27.0"
